============

svn trunk
---------

* Fixed small problem that prevented using ``pip.py`` without actually
  installing pip.

* Fixed ``--upgrade``, which would download and appear to install
  upgraded packages, but actually just reinstall the existing package.

* Fixed Windows problem with putting the install record in the right
  place, and generating the ``pip`` script with Setuptools.

0.2
---

* Renamed to ``pip``, and to install you now do ``pip install
  PACKAGE``

* Added command ``pip zip PACKAGE`` and ``pip unzip PACKAGE``.  This
  is particularly intended for Google App Engine to manage libraries
  to stay under the 1000-file limit.

* Some fixes to bundles, especially editable packages and when
  creating a bundle using unnamed packages (like just an svn
  repository without ``#egg=Package``).

0.1.4
-----

* Added an option ``--install-option`` to pass options to pass
  arguments to ``setup.py install``

* ``.svn/`` directories are no longer included in bundles, as these
  directories are specific to a version of svn -- if you build a
  bundle on a system with svn 1.5, you can't use the checkout on a
  system with svn 1.4.  Instead a file ``svn-checkout.txt`` is
  included that notes the original location and revision, and the
  command you can use to turn it back into an svn checkout.  (Probably
  unpacking the bundle should, maybe optionally, recreate this
  information -- but that is not currently implemented, and it would
  require network access.)

* Avoid ambiguities over project name case, where for instance
  MyPackage and mypackage would be considered different packages.
  This in particular caused problems on Macs, where ``MyPackage/`` and
  ``mypackage/`` are the same directory.

* Added support for an environmental variable
  ``$PIP_DOWNLOAD_CACHE`` which will cache package downloads, so
  future installations won't require large downloads.  Network access
  is still required, but just some downloads will be avoided when
  using this.
